clusters/cl01tl/manifests/headlamp/HTTPRoute-headlamp.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headlamp
  namespace: headlamp
  labels:
    helm.sh/chart: headlamp-0.45.0
    app.kubernetes.io/name: headlamp
    app.kubernetes.io/instance: headlamp
    app.kubernetes.io/version: "0.45.0"
    app.kubernetes.io/managed-by: Helm
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
  hostnames:
    - headlamp.alexlebens.dev
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: headlamp
          port: 80
          weight: 1
