clusters/cl01tl/manifests/headlamp/HTTPRoute-https-route-headlamp.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https-route-headlamp
  namespace: headlamp
  labels:
    app.kubernetes.io/name: https-route-headlamp
    app.kubernetes.io/instance: headlamp
    app.kubernetes.io/part-of: headlamp
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
  hostnames:
    - headlamp.alexlebens.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ''
          kind: Service
          name: headlamp
          port: 80
          weight: 100
